--- a/compose-teste.yml
+++ b/compose-teste.yml
@@ -2,13 +2,12 @@ version: "3.3"
 
 services:
   app:
-    image: node:12-alpine
-    command: sh -c "yarn install && yarn run dev"
+    image: jadilsonpaiva/nodeapp
     ports:
       - 80:3000
     working_dir: /app
     volumes:
-      - /root/nodeapp/:/app
+      - /root/nodeapp:/app
     environment:
       MYSQL_HOST: mysql
       MYSQL_USER: root
@@ -18,7 +17,8 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - /root/todo/banco/:/var/lib/mysql
+      - /root/nodeapp/banco/:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: todos
+
